wrong answer logic and contestant id

--- a/src/style.scss
+++ b/src/style.scss
@@ -4,3 +4,14 @@
   flex-direction: column-reverse;
   align-items: flex-end;
 }
+
+
+.current-value{
+  color: red;
+}
+
+
+.contestants {
+  margin-top: 1vh;
+  border: 4px solid black;
+}
