--- a/src/style.scss
+++ b/src/style.scss
@@ -22,6 +22,7 @@
   min-height: 100%;
 
   .value-disc{
+    height: 9.09%;
     margin-top: 1vh;
     text-align: center;
     width: 50%;
@@ -49,8 +50,7 @@ background-color: blue;
 
 
 .pot-amount{
-  width: 12%;
-  position: fixed;
+  // width: 12%;
   margin-top: 6vh;
 }
 
