--- a/src/style.scss
+++ b/src/style.scss
@@ -25,7 +25,7 @@ html{
 
 .money-chain{
   display: flex;
-  color: silver;
+  // background-color: rgb(137, 21, 25);
   flex-direction: column-reverse;
   align-items: center;
   min-height: 100%;
@@ -44,7 +44,6 @@ html{
 .banked-value{
   margin-bottom: -3vh;
   background-color: rgb(137, 21, 25);
-  color: black;
   box-shadow: 0.5vh 0.5vw;
 }
 
@@ -102,4 +101,26 @@ color: red;
 .name{
   font-size: 4vw;
 
+}
+
+.timer{
+  color: whitesmoke;
+}
+
+.summary{
+  color: whitesmoke;
+}
+
+form{
+  width: 50vw;
+
+}
+
+
+.logo{
+  width: 20%;
+}
+
+.top{
+  display: flex;
 }
