slight adjustments to game

--- a/src/style.scss
+++ b/src/style.scss
@@ -108,7 +108,7 @@ color: red;
 }
 
 .summary{
-  color: whitesmoke;
+  color: black;
 }
 
 form{
@@ -118,7 +118,8 @@ form{
 
 
 .logo{
-  width: 20%;
+  height: 10%;
+  width: 10%;
 }
 
 .top{
